--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -604,6 +604,8 @@ transformers:
       # prior to 4.30.0 are incompatible with this breaking change in Keras.
       # See: https://github.com/huggingface/transformers/issues/23352 for discussion
       "< 4.30.0": ["tensorflow<2.13.0"]
+      # Transformers dev version depends on `torch.xpu` module which is introduced since torch 2.3
+      "== dev": ["torch>=2.3.0"]
     run: |
       pytest tests/transformers/test_transformers_autolog.py
 
