--- a/.github/workflows/slow-tests.yml
+++ b/.github/workflows/slow-tests.yml
@@ -69,9 +69,8 @@ jobs:
           python -m venv .venv
           source .venv/bin/activate
           source ./dev/install-common-deps.sh --ml
-          # We need to install `tf-keras` because the transformer flavor
-          # tests depends on Keras < 3 but the `./dev/install-common-deps.sh`
-          # installs Keras 3 in python 3.9 environment.
+          # transformers requires `tf-keras` when keras 3.0 is installed.
+          # See https://github.com/huggingface/transformers/issues/27377 for more details.
           python -m pip install langchain_experimental tf-keras
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
