--- a/.github/workflows/dev-setup.yml
+++ b/.github/workflows/dev-setup.yml
@@ -55,6 +55,9 @@ jobs:
         timeout-minutes: 120
       - name: Run Environment tests
         run: |
+          curl https://pyenv.run | bash
+          export PYENV_ROOT="$HOME/.pyenv"
+          [[ -d $PYENV_ROOT/bin ]] && export PATH="$PYENV_ROOT/bin:$PATH"
           TERM=xterm bash ./dev/test-dev-env-setup.sh
 
 
