--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -125,6 +125,8 @@ tensorflow:
       # `cannot import name 'TypeAliasType' from 'typing_extensions'`
       ">= 2.12.1, <= 2.13.1": ["sqlalchemy<2.0.25"]
       "== 2.15.1": ["transformers<4.39.0"]
+      # keras 3.4.0 has bug https://github.com/keras-team/keras/pull/19924
+      ">= 2.16.1": ["keras!=3.4.0"]
     run: |
       pytest \
         tests/tensorflow/test_load_saved_tensorflow_estimator.py \
