--- a/.github/workflows/dev-setup.yml
+++ b/.github/workflows/dev-setup.yml
@@ -6,6 +6,11 @@ on:
       - "dev/dev-env-setup.sh"
       - "dev/test-dev-env-setup.sh"
       - ".github/workflows/dev-setup.yml"
+  pull_request:
+    paths:
+      - "dev/dev-env-setup.sh"
+      - "dev/test-dev-env-setup.sh"
+      - ".github/workflows/dev-setup.yml"
   schedule:
     - cron: "42 7 * * 0"
   workflow_dispatch:
@@ -41,8 +46,8 @@ jobs:
     timeout-minutes: 30
     if: github.event_name != 'schedule' || github.repository == 'mlflow-automation/mlflow'
     steps:
-      - uses: ./.github/actions/free-disk-space
       - uses: actions/checkout@v4
+      - uses: ./.github/actions/free-disk-space
         with:
           submodules: recursive
           repository: ${{ github.event_name == 'schedule' && 'mlflow/mlflow' || github.event.inputs.repository }}
