Add pbkit extension for protobuf files
Signed-off-by: Jonathan Giannuzzi <jonathan@giannuzzi.me>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,6 +39,7 @@
         "ms-python.python",
         "ms-toolsai.jupyter",
         "oderwat.indent-rainbow",
+        "pbkit.vscode-pbkit",
         "PKief.material-icon-theme",
         "ritwickdey.LiveServer",
         "shardulm94.trailing-spaces"
