Add even-better-toml extension
Signed-off-by: Jonathan Giannuzzi <jonathan@giannuzzi.me>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -42,7 +42,8 @@
         "pbkit.vscode-pbkit",
         "PKief.material-icon-theme",
         "ritwickdey.LiveServer",
-        "shardulm94.trailing-spaces"
+        "shardulm94.trailing-spaces",
+        "tamasfe.even-better-toml"
       ]
     }
   }
