--- a/.github/workflows/cross-version-tests.yml
+++ b/.github/workflows/cross-version-tests.yml
@@ -156,9 +156,7 @@ jobs:
       - name: Install ${{ matrix.package }} ${{ matrix.version }}
         run: |
           ${{ matrix.install }}
-      - name: Check package versions
-        run: |
-          python dev/show_package_release_dates.py
+      - uses: ./.github/actions/show-versions
       - name: Pre-test
         if: matrix.pre_test
         run: |
@@ -204,9 +202,7 @@ jobs:
       - name: Install ${{ matrix.package }} ${{ matrix.version }}
         run: |
           ${{ matrix.install }}
-      - name: Check package versions
-        run: |
-          python dev/show_package_release_dates.py
+      - uses: ./.github/actions/show-versions
       - name: Pre-test
         if: matrix.pre_test
         run: |
