Update more workflows
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -158,6 +158,7 @@ jobs:
       - name: Install dependencies
         run: |
           source ./dev/install-common-deps.sh
+      - uses: ./.github/actions/show-versions
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
@@ -182,6 +183,7 @@ jobs:
           python -m venv .venv
           source .venv/bin/activate
           source ./dev/install-common-deps.sh --ml
+      - uses: ./.github/actions/show-versions
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
@@ -217,6 +219,7 @@ jobs:
         run: |
           source ./dev/install-common-deps.sh
           pip install pyspark langchain langchain-community
+      - uses: ./.github/actions/show-versions
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
@@ -242,6 +245,7 @@ jobs:
         run: |
           source ./dev/install-common-deps.sh
           pip install pyspark torch transformers langchain langchain-experimental
+      - uses: ./.github/actions/show-versions
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
@@ -274,6 +278,7 @@ jobs:
           source ./dev/install-common-deps.sh
           pip install tensorflow 'pyspark[connect]'
           pip install typing_extensions -U
+      - uses: ./.github/actions/show-versions
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
@@ -297,6 +302,7 @@ jobs:
       - name: Install dependencies
         run: |
           source ./dev/install-common-deps.sh --ml
+      - uses: ./.github/actions/show-versions
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
