--- a/.github/actions/show-versions/action.yml
+++ b/.github/actions/show-versions/action.yml
@@ -13,4 +13,5 @@ runs:
             source .venv/bin/activate
           fi
         fi
+        pip install aiohttp > /dev/null
         python dev/show_package_release_dates.py
