--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -35,6 +35,14 @@ env:
   PYTHONUTF8: "1"
 
 jobs:
+  miniconda-rate-limit:
+    if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v4
+      - run: docker build -t miniconda-rate-limit .
+
   # python-skinny tests cover a subset of mlflow functionality
   # that is meant to be supported with a smaller dependency footprint.
   # The python skinny tests cover the subset of mlflow functionality
