--- a/.github/workflows/release-note.yml
+++ b/.github/workflows/release-note.yml
@@ -36,6 +36,8 @@ jobs:
     timeout-minutes: 5
     steps:
       - uses: actions/checkout@v4
+        with:
+          sparse-checkout: .github
       - name: validate-labeled
         uses: actions/github-script@v7
         with:
