--- a/.github/workflows/cancel.yml
+++ b/.github/workflows/cancel.yml
@@ -17,6 +17,8 @@ jobs:
       actions: write # to cancel workflow runs
     steps:
       - uses: actions/checkout@v4
+        with:
+          sparse-checkout: .github
       - uses: actions/github-script@v7
         with:
           script: |
