--- a/.github/workflows/cross-version-test-runner.yml
+++ b/.github/workflows/cross-version-test-runner.yml
@@ -20,6 +20,8 @@ jobs:
       actions: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          sparse-checkout: .github
       - uses: actions/github-script@v7
         id: get-ref
         with:
