--- a/.github/workflows/release-note.yml
+++ b/.github/workflows/release-note.yml
@@ -54,6 +54,8 @@ jobs:
       pull-requests: write # postMerge labels PRs
     steps:
       - uses: actions/checkout@v4
+        with:
+          sparse-checkout: .github
       - name: post-merge
         uses: actions/github-script@v7
         with:
