--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -24,7 +24,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          sparse-checkout: .github
+          sparse-checkout: |
+            .github
       - uses: actions/github-script@v7
         with:
           script: |
