--- a/.github/workflows/protect.yml
+++ b/.github/workflows/protect.yml
@@ -25,7 +25,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          sparse-checkout: .github
+          sparse-checkout: |
+            .github
       - uses: actions/github-script@v7
         with:
           script: |
