--- a/.github/workflows/release-note.yml
+++ b/.github/workflows/release-note.yml
@@ -37,7 +37,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          sparse-checkout: .github
+          sparse-checkout: |
+            .github
       - name: validate-labeled
         uses: actions/github-script@v7
         with:
@@ -55,7 +56,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          sparse-checkout: .github
+          sparse-checkout: |
+            .github
       - name: post-merge
         uses: actions/github-script@v7
         with:
