--- a/charts/mlflow/tests/deployment_test.yaml
+++ b/charts/mlflow/tests/deployment_test.yaml
@@ -14,6 +14,9 @@ tests:
         repository: mlflow/mlflow
         tag: latest
         pullPolicy: Always
+        pullSecrets:
+          - name: test-secret-1
+          - name: test-secret-2
     asserts:
       - equal:
           path: spec.template.spec.containers[?(@.name == "mlflow")].image
@@ -21,6 +24,11 @@ tests:
       - equal:
           path: spec.template.spec.containers[?(@.name == "mlflow")].imagePullPolicy
           value: Always
+      - equal:
+          path: spec.template.spec.imagePullSecrets
+          value:
+            - name: test-secret-1
+            - name: test-secret-2
 
   - it: Should set mlflow server arguments properly if extra arguments are specified
     set:
