--- a/.github/workflows/team-review.yml
+++ b/.github/workflows/team-review.yml
@@ -26,6 +26,12 @@ jobs:
               "WeichenXu123",
               "xq-yin",
             ];
+            await github.rest.issues.createComment({
+              owner,
+              repo,
+              issue_number: pull_number,
+              body: "hello",
+            });
             const author = context.payload.pull_request.user.login;
             const reviews = await github.rest.pulls.listReviews({
               owner,
