--- a/.github/workflows/team-review.yml
+++ b/.github/workflows/team-review.yml
@@ -8,8 +8,8 @@ jobs:
   review:
     runs-on: ubuntu-latest
     if: ${{ github.event.requested_reviewer.login == 'mlflow-automation'}}
-    permissions:
-      pull-requests: write
+    # permissions:
+    #   pull-requests: write
     steps:
       - uses: actions/github-script@v7
         with:
