--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -605,6 +605,7 @@ transformers:
       # prior to 4.30.0 are incompatible with this breaking change in Keras.
       # See: https://github.com/huggingface/transformers/issues/23352 for discussion
       "< 4.30.0": ["tensorflow<2.13.0"]
+      "== 4.34.1": ["accelerate<0.32.0"]
     run: |
       pytest tests/transformers/test_transformers_autolog.py
 
