--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -701,6 +701,24 @@ langchain:
         pytest tests/langchain/test_langchain_autolog.py
       fi
 
+llama_index:
+  package_info:
+    pip_release: "llama-index"
+    install_dev: |
+      pip install git@github.com:run-llama/llama_index.git
+  models:
+    # TODO: Min version is picked randomly, to be replaced with the actual lowerbound.
+    minimum: "0.6.0"
+    maximum: "0.10.53"
+    requirements:
+      ">= 0.0.0": [
+        "llama-index",
+        "openai",
+      ]
+    run:
+      # TODO: Add --ignore flag for autologging test once it's implemented
+      pytest tests/llama_index
+
 sentence_transformers:
   package_info:
     pip_release: "sentence-transformers"
