--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -711,7 +711,10 @@ llama_index:
     maximum: "0.10.53"
     requirements:
       ">= 0.0.0": ["llama-index", "openai"]
-    run:
+    run: |
+      # Install the same version of llama-index-core as llama-index
+      LLAMA_VERSION=$(python -c "import llama_index; print(llama_index.__version__)")
+      pip install "llama-index-core==$LLAMA_VERSION"
       # TODO: Add --ignore flag for autologging test once it's implemented
       pytest tests/llama_index
 
