update package name
Signed-off-by: Gabriel Fu <hfu.gabriel@gmail.com>

--- a/examples/deployments/deployments_server/plugin/my-llm/pyproject.toml
+++ b/examples/deployments/deployments_server/plugin/my-llm/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
-name = "foo"
+name = "my_llm"
 version = "1.0"
 
 [project.entry-points."mlflow.gateway.providers"]
-foo = "foo.providers:FooProvider"
+my_llm = "my_llm.providers:MyLLMProvider"
 
 [tool.setuptools.packages.find]
-include = ["foo*"]
+include = ["my_llm*"]
 namespaces = false
