--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -645,7 +645,7 @@ langchain:
       ">= 0.0.0": [
           "pyspark",
           "transformers",
-          "tensorflow<2.16.0", # keras 3 is not supported in transformers
+          "torch",
           "openai",
           "google-search-results",
           "psutil",
@@ -654,7 +654,6 @@ langchain:
           "numexpr",
           "hf_transfer",
           "langchain-core!=0.1.39", # https://github.com/langchain-ai/langchain/issues/19947
-          "typing_extensions>=4.7.0", # https://github.com/langchain-ai/langchain/issues/24287
         ]
       ">= 0.2": ["langchain-huggingface"]
     run: |
