--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -646,6 +646,7 @@ langchain:
           "pyspark",
           "transformers",
           "torch",
+          "torchvision",
           "openai",
           "google-search-results",
           "psutil",
