--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -145,11 +145,16 @@ tensorflow:
       # `cannot import name 'TypeAliasType' from 'typing_extensions'`
       ">= 2.12.1, <= 2.13.1": ["sqlalchemy<2.0.25"]
     run: |
-      pytest tests/tensorflow/test_tensorflow2_autolog.py
-      pytest tests/tensorflow/test_tensorflow2_autolog.py
-      pytest tests/tensorflow/test_tensorflow2_autolog.py
-      pytest tests/tensorflow/test_tensorflow2_autolog.py
-      pytest tests/tensorflow/test_tensorflow2_autolog.py
+      pytest tests/tensorflow/test_tensorflow2_autolog.py::test_tf_keras_autolog_implicit_batch_size_works
+      pytest tests/tensorflow/test_tensorflow2_autolog.py::test_tf_keras_autolog_implicit_batch_size_works
+      pytest tests/tensorflow/test_tensorflow2_autolog.py::test_tf_keras_autolog_implicit_batch_size_works
+      pytest tests/tensorflow/test_tensorflow2_autolog.py::test_tf_keras_autolog_implicit_batch_size_works
+      pytest tests/tensorflow/test_tensorflow2_autolog.py::test_tf_keras_autolog_implicit_batch_size_works
+      pytest tests/tensorflow/test_tensorflow2_autolog.py::test_tf_keras_autolog_implicit_batch_size_works
+      pytest tests/tensorflow/test_tensorflow2_autolog.py::test_tf_keras_autolog_implicit_batch_size_works
+      pytest tests/tensorflow/test_tensorflow2_autolog.py::test_tf_keras_autolog_implicit_batch_size_works
+      pytest tests/tensorflow/test_tensorflow2_autolog.py::test_tf_keras_autolog_implicit_batch_size_works
+      pytest tests/tensorflow/test_tensorflow2_autolog.py::test_tf_keras_autolog_implicit_batch_size_works
 
 xgboost:
   package_info:
