--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -703,7 +703,7 @@ llama_index:
   package_info:
     pip_release: "llama-index"
     install_dev: |
-      pip install git@github.com:run-llama/llama_index.git
+      pip install git+https://github.com/run-llama/llama_index.git
   models:
     # New event/span framework is fully implemented in 0.10.44
     minimum: "0.10.44"
