--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -526,9 +526,9 @@ paddle:
       "< 2.5.0": ["google-cloud-storage==2.14.0"]
     run: |
       pytest tests/paddle/test_paddle_model_export.py
-  autolog:
+  autologging:
     minimum: "2.4.1"
-    maximum: "2.4.1"
+    maximum: "2.6.1"
     run: |
       pytest tests/paddle/test_paddle_autolog.py
 
