--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -640,7 +640,7 @@ langchain:
     install_dev: |
       pip install git+https://github.com/hwchase17/langchain#subdirectory=libs/langchain
   models:
-    minimum: "0.0.244"
+    minimum: "0.0.334"
     maximum: "0.2.11"
     requirements:
       ">= 0.0.0": [
@@ -648,7 +648,11 @@ langchain:
           "transformers",
           "torch",
           "torchvision",
-          "openai",
+          # TODO: he LLM saving/loading logic does not handle partner packages such as langchain-openai
+          # and always load llms from the legacy community package. Particularly for OpenAI LLM,
+          # the legacy version is not comptible with OpenAI SDK >= 1.8.0, so we need to pin the
+          # version here until resolving the loading issue.
+          "openai<1.8.0",
           "google-search-results",
           "psutil",
           "faiss-cpu",
@@ -659,12 +663,8 @@ langchain:
         ]
       ">= 0.2": ["langchain-huggingface"]
     run: |
-      LANGCHAIN_NEW=$(python -c "from packaging.version import Version;import langchain;print(Version(langchain.__version__) >= Version('0.0.267'))")
       # Run all langchain tests except autologging
-      pytest tests/langchain --ignore tests/langchain/test_langchain_tracer.py --ignore tests/langchain/test_langchain_autolog.py
-      if [[ $LANGCHAIN_NEW = "True" ]]; then
-        pytest tests/langchain/test_langchain_tracer.py
-      fi
+      pytest tests/langchain --ignore tests/langchain/test_langchain_autolog.py
       # test both pydantic v1 and v2
       PYDANTIC_VERSION=$(python -c "import pydantic; print(pydantic.__version__)")
       if [[ $PYDANTIC_VERSION == 1.* && $LANGCHAIN_NEW = "True" ]]; then
