--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -117,7 +117,7 @@ jobs:
       # js
       # ************************************************************************
       - if: steps.diff.outputs.js == 'true'
-        uses: .github/actions/setup-node
+        uses: ./.github/actions/setup-node
       - if: steps.diff.outputs.js == 'true'
         working-directory: mlflow/server/js
         run: |
