--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -47,7 +47,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - uses: .github/actions/setup-node
+      - uses: ./.github/actions/setup-node
       - name: Disable problem matcher
         if: runner.os == 'Windows'
         run: |
