--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -224,7 +224,7 @@ jobs:
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
-          pytest --splits=${{ matrix.splits }} --group=${{ matrix.group }} tests/models
+          pytest 'tests/models/test_python_api.py::test_predict_with_pip_requirements_override[conda]' -s
 
   # NOTE: numpy is pinned in this suite due to its heavy reliance on shap, which internally uses
   # references to the now fully deprecated (as of 1.24.x) numpy types (i.e., np.bool).
