--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -224,6 +224,7 @@ jobs:
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
+          /user/share/miniconda/bin/conda create -n test-env python=3.8.18 -y
           /usr/share/miniconda/bin/conda config --show channels
           /usr/share/miniconda/bin/conda config --remove channels defaults
           pytest 'tests/models/test_python_api.py::test_predict_with_pip_requirements_override[conda]' -s
