--- a/pytest.ini
+++ b/pytest.ini
@@ -6,3 +6,4 @@ filterwarnings =
   error:^`np\.[a-z]+` is a deprecated alias for.+:DeprecationWarning:tests
   error::pytest.PytestCollectionWarning
 timeout = 1200
+asyncio_mode=auto
