--- a/nuodata/Dockerfile
+++ b/nuodata/Dockerfile
@@ -5,6 +5,16 @@ EXPOSE 5000
 WORKDIR /app
 COPY . .
 
+RUN apt-get update && apt-get install -y curl
+
+RUN curl -sL https://deb.nodesource.com/setup_18.x | bash - \
+        && apt-get install -y --no-install-recommends nodejs \
+        && npm install --global yarn
+
+RUN cd ./mlflow/server/js\
+        && yarn add \
+        && npm run build
+
 RUN python -m pip install --upgrade pip && \
     pip install --no-cache-dir -e .[extras]
 
