--- a/mlflow/server/js/package.json
+++ b/mlflow/server/js/package.json
@@ -51,6 +51,7 @@
     "invariant": "^2.2.4",
     "js-yaml": "^3.14.0",
     "json-bigint": "databricks/json-bigint#a1defaf9cd8dd749f0fd4d5f83a22cd846789658",
+    "keycloak-js": "^25.0.2",
     "leaflet": "^1.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -70,6 +71,7 @@
     "react-hook-form": "^7.36.0",
     "react-iframe": "1.8.0",
     "react-intl": "^6.0.4",
+    "react-loader-spinner": "^6.1.6",
     "react-mde": "^11.0.0",
     "react-pdf": "^4.1.0",
     "react-plotly.js": "2.2.0",
