--- a/.github/workflows/terraform-operations-dev.yaml
+++ b/.github/workflows/terraform-operations-dev.yaml
@@ -63,7 +63,7 @@ jobs:
           ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID_DEV }}
         run: |
           echo 'locals {' > terragrunt/dev/params.hcl
-          echo '  aws_account_id = "${ACCOUNT_ID}"' >> terragrunt/dev/params.hcl
+          echo '  aws_account_id = \"${ACCOUNT_ID}\"' >> terragrunt/dev/params.hcl
           echo '  environment    = "dev"' >> terragrunt/dev/params.hcl
           echo '  aws_region     = "us-west-1"' >> terragrunt/dev/params.hcl
           echo '  app_name       = "nuodata-mlflow"' >> terragrunt/dev/params.hcl
