pip cache remove added

--- a/nuodata/Dockerfile
+++ b/nuodata/Dockerfile
@@ -11,11 +11,13 @@ RUN curl -sL https://deb.nodesource.com/setup_18.x | bash - \
         && apt-get install -y --no-install-recommends nodejs \
         && npm install --global yarn
 
-RUN cd ./mlflow/server/js\
+RUN cd ./mlflow/server/js \
+        && rm -rf node_modules \
         && yarn add \
         && npm run build
 
-RUN python -m pip install --upgrade pip && \
+RUN pip cache purge && \
+    python -m pip install --upgrade pip && \
     pip install --no-cache-dir -e .[extras]
 
 RUN pip install psycopg2-binary httpx
