--- a/.github/actions/setup-python/action.yml
+++ b/.github/actions/setup-python/action.yml
@@ -23,19 +23,12 @@ runs:
         if [ -z "$python_version" ]; then
           python_version=$(cat requirements/python-version.txt)
         fi
-        if [[ "$python_version" == "3.8" ]]; then
-          if [ ${{ runner.os }} == "Windows" ]; then
-            # GitHub Actions does not have a Python 3.8.12 binary for Windows as of Oct. 27 2022
-            python_version="3.8.10"
-          else
-            python_version="3.8.18"
-          fi
         elif [[ "$python_version" == "3.9" ]]; then
           python_version="3.9.18"
         elif [[ "$python_version" == "3.10" ]]; then
           python_version="3.10.14"
         else
-          echo "Invalid python version: '$python_version'. Must be '3.8', '3.9', or '3.10'."
+          echo "Invalid python version: '$python_version'. Must be '3.9', or '3.10'."
           exit 1
         fi
         echo "version=$python_version" >> $GITHUB_OUTPUT
