--- a/pyproject.release.toml
+++ b/pyproject.release.toml
@@ -34,7 +34,7 @@ dependencies = [
   "matplotlib<4",
   "numpy<2",
   "pandas<3",
-  "pyarrow<16,>=4.0.0",
+  "pyarrow>=4.0.0",
   "scikit-learn<2",
   "scipy<2",
   "sqlalchemy<3,>=1.4.0",
