--- a/.github/workflows/maintainer-approval.yml
+++ b/.github/workflows/maintainer-approval.yml
@@ -19,6 +19,9 @@ jobs:
     if: github.event.pull_request || (github.event.review && github.event.review.state == 'approved')
     steps:
       - uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            .github
       - name: Fail without core maintainer approval
         uses: actions/github-script@v7
         with:
