--- a/pyproject.skinny.toml
+++ b/pyproject.skinny.toml
@@ -47,14 +47,14 @@ file = "LICENSE.txt"
 extras = [
   "pyarrow",
   "requests-auth-aws-sigv4",
-  "boto3>=1.34.155",
-  "botocore>=1.34.155",
+  "boto3",
+  "botocore",
   "google-cloud-storage>=1.30.0",
   "azureml-core>=1.2.0",
   "pysftp",
-  "kubernetes>=30.1.0",
-  "mlserver>=1.4.0",
-  "mlserver-mlflow>=1.4.0",
+  "kubernetes",
+  "mlserver>=1.2.0,!=1.3.1,<1.4.0",
+  "mlserver-mlflow>=1.2.0,!=1.3.1,<1.4.0",
   "virtualenv",
   "prometheus-flask-exporter",
 ]
