Run on pull_request_review
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/.github/workflows/maintainer-approval.yml
+++ b/.github/workflows/maintainer-approval.yml
@@ -1,7 +1,8 @@
 name: Maintainer approval
 
 on:
-  pull_request:
+  pull_request_review:
+    types: [submitted]
 
 permissions:
   pull-requests: read
