CI: use default linux image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build_doc_r:
     machine:
-      image: ubuntu-2004:current
+      image: default
 
     steps:
       - checkout
