--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -90,10 +90,7 @@ jobs:
       - name: Run tests
         run: |
           source .venv/bin/activate
-          source dev/setup-ssh.sh
-          pytest --splits=${{ matrix.splits }} --group=${{ matrix.group }} --quiet --requires-ssh \
-            --ignore-flavors --ignore=tests/examples --ignore=tests/recipes --ignore=tests/evaluate \
-            --ignore tests/deployments/server tests
+          pytest tests/system_metrics/test_system_metrics_logging.py::test_system_metrics_monitor_with_multi_node
 
   database:
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
